--- a/src/main/res/layout/play_video_activity.xml
+++ b/src/main/res/layout/play_video_activity.xml
@@ -5,9 +5,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
-    <JCVideoPlayerStandard
-        android:id="@+id/play_video_activity_vps"
-        android:layout_width="match_parent"
+
+    <VideoView
+        android:id="@+id/play_video_activity_vv"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"/>
 </LinearLayout>
