--- a/src/main/res/layout/play_video_activity.xml
+++ b/src/main/res/layout/play_video_activity.xml
@@ -2,14 +2,32 @@
   ~ Copyright (c) 2017. sheng yan
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:background="#99000000"
+    >
 
-    <VideoView
-        android:id="@+id/play_video_activity_vv"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        >
+        <VideoView
+            android:id="@+id/play_video_activity_vv"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
+
+
+    <ProgressBar
+        android:id="@+id/play_video_activity_loading_pb"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
+</RelativeLayout>
