--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -16,4 +16,13 @@
         <item name="android:windowContentOverlay">@null</item>//是否有遮盖
     </style>
 
+    <style name="DialogTransparent" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
 </resources>
