--- a/src/main/res/layout/menu_item_layout.xml
+++ b/src/main/res/layout/menu_item_layout.xml
@@ -46,7 +46,7 @@
             android:id="@+id/menu_item_layout_ad_flag_iv"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ad_1" />
 
     </LinearLayout>
 
@@ -59,14 +59,17 @@
         <TextView
             android:id="@+id/menu_item_layout_dishes_name_tv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/big_text_size"
+            android:textColor="@color/text_color_gray"
+            />
 
         <TextView
             android:id="@+id/menu_item_layout_dishes_detail_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/detail_bg"
-            android:textSize="@dimen/big_text_size"
+            android:textSize="@dimen/normal_text_size"
             android:paddingTop="3dp"
             android:paddingBottom="3dp"
             android:paddingLeft="10dp"
@@ -77,12 +80,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        >
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/today_price" />
 
 
 
@@ -156,12 +163,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        >
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/today_hot_sold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -202,12 +213,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        >
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/provide_dishes_time" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -234,12 +249,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        >
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/health_index" />
 
         <LinearLayout
             android:layout_width="wrap_content"
