--- a/src/main/res/layout/recommend_fragment.xml
+++ b/src/main/res/layout/recommend_fragment.xml
@@ -2,19 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_bg_color"
     android:orientation="vertical">
-    <include
-        layout="@layout/title_bar_layout"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-    </include>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="100dp"
         android:orientation="horizontal"
         >
         <LinearLayout
