--- a/src/main/res/layout/login_activity.xml
+++ b/src/main/res/layout/login_activity.xml
@@ -53,6 +53,7 @@
                     android:hint="请输入手机号"
                     android:inputType="number"
                     android:maxLength="11"
+                    android:textColor="@color/dark_gray"
                     android:background="@drawable/login_text_field_bg"
                     android:textColorHint="@color/small_gray"
                     android:textSize="@dimen/big_text_size"
@@ -75,6 +76,7 @@
                         android:textSize="@dimen/big_text_size"
                         android:gravity="center"
                         android:maxLength="6"
+                        android:textColor="@color/dark_gray"
                         android:textColorHint="@color/small_gray"
                         android:inputType="number"
                         />
