--- a/src/main/res/layout/recommend_activity_list_menu_item.xml
+++ b/src/main/res/layout/recommend_activity_list_menu_item.xml
@@ -62,6 +62,7 @@
                 android:gravity="center_vertical"
                 >
                 <ImageView
+                    android:id="@+id/recommend_activity_list_menu_item_reduce_iv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/reduce"
@@ -78,6 +79,7 @@
                     />
 
                 <ImageView
+                    android:id="@+id/recommend_activity_list_menu_item_add_iv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/add"
@@ -130,6 +132,7 @@
                 android:gravity="center_vertical"
                 >
                 <ImageView
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/reduce"
@@ -146,6 +149,7 @@
                     />
 
                 <ImageView
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/add"
