--- a/src/main/res/layout/recommend_fragment.xml
+++ b/src/main/res/layout/recommend_fragment.xml
@@ -54,6 +54,7 @@
                         android:layout_alignParentRight="true">
 
                         <ImageButton
+                            android:id="@+id/recommend_fragment_reduce_ib"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@mipmap/reduce"
@@ -65,10 +66,13 @@
                             android:layout_height="wrap_content"
                             android:text="1"
                             android:textSize="@dimen/normal_text_size"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
                             android:textColor="@color/title_bar_normal_color"
                             />
 
                         <ImageButton
+                            android:id="@+id/recommend_fragment_add_ib"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@mipmap/add"
